# kakadu.github.io

./: Gemfile  Gemfile_new  Makefile  README.md  Untitled Diagram.drawio  _config.yml  crazy.asciidoc  crazy.html  index.asciidoc  index2.html  robots.txt
DSLs/: README.md  index.asciidoc  index.html  index_eng.asciidoc  index_eng.html
_plugins/: spoiler.rb
_posts/: 2021-06-01-course-topics.markdown  2021-06-01-talks.markdown  2021-06-01-welcome-to-jekyll.markdown  2021-07-06-Upcoming_FP_course.md  2021-11-15-appendo.md  2022-06-29-summer-school.md  2022-06-30-sys-settings.md  2024-02-28-course-topics-IFMO.markdown  2024-05-28-summer-school-2024.markdown  2025-06-12-summer-school-2025.markdown
_site/: 404.html  feed.xml  index.html
blogarion/: Coursework-topics.html  Hello-papers.html  Hello-world.html  Next-FP-course.html  Unsorted-papers.html  Unsorted-teaching.html  feed.atom  hearthstone.html  hearthstone.md  hello-world-it-s-first-entry.html  hello-world-it-s-first-entry.md  index.html  log.html  next-fp-course.html  next-fp-course.md  todo.html  todo.md  unsorted-papers.html  unsorted-papers.md  unsorted-teaching.html  unsorted-teaching.md  unsorted.html  unsorted.md
blogitems/: Coursework-topics.0.md  Hello-papers.0.md  Hello-world.0.md  Makefile  Next-FP-course.0.md  Observations_of_a_Functional_Programmer.srt  Unsorted-teaching.0.md  hearthstone.0.md  html  observations_of_a_functional_programmer.0.md  todo.0.md  unsorted.0.md
civwiki/: nations.html
demotast/: out.html
fp-book/: .buildinfo  020types.html  030adt.html  036quickcheck.html  040cps.html  041anf.html  050ulc.html  060hm.html  998glossary.html  genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js
papers/lambda2023/cpp/: .gitignore  CMakeLists.txt  lambda.cpp  lambda.h  main.cpp
(+332 files in other folders)
